Fix text alignment on page

--- a/assets/css/_header.sass
+++ b/assets/css/_header.sass
@@ -43,6 +43,7 @@
 			--sclf-duration: 20
 			animation-direction: normal, normal
 			animation-name: fade, move-up-in
+			text-align: center
 
 		p
 			--sclf-duration: 20
